--- a/apps/website/styles/globals.css
+++ b/apps/website/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+        @apply selection:bg-[#ff5a5f] selection:text-white;
+    }
+}
