--- a/apps/website/styles/globals.css
+++ b/apps/website/styles/globals.css
@@ -1,8 +1,8 @@
-@tailwind base;
+/* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+@layer components {
     html {
         @apply selection:bg-[#ff5a5f] selection:text-white;
     }
